--- a/04-EstrategiasAvanzadasMetasAds/4.5-Entrega1.md
+++ b/04-EstrategiasAvanzadasMetasAds/4.5-Entrega1.md
@@ -74,16 +74,55 @@
 | Qué espera de Colonia Aventura Corre | Eventos bien organizados, comunidad activa | Desafíos, experiencias únicas        | Sentirse bienvenida, formar parte del grupo |
 
 
-## 3. Táctica Publicitaria
+## 3. 📣 Táctica Publicitaria
 
-- **Objetivo publicitario:** Incrementar inscripciones en eventos deportivos mediante campañas de generación de leads y conversiones en plataformas Meta Ads.  
-- **Segmentación del público:**  
-  - Edad: 25-40 años  
-  - Sexo: Todos  
-  - Ubicación: Colonia del Sacramento y alrededores (radio de 50 km)  
-  - Intereses: Running, ciclismo, deportes de aventura, vida saludable, outdoor  
-  - Idiomas: Español  
-- **Período y presupuesto de la táctica:** 6 meses con un presupuesto total de $10,000 UYU, distribuidos en campañas de awareness, lead generation y conversiones.
+**Objetivo Comercial:**
+Dar a conocer y posicionar a *Colonia Aventura Corre* como un espacio de pertenencia, entrenamiento y comunidad para corredores, ciclistas y aventureros en la región de Colonia.
+
+**Objetivo Publicitario:**
+Generar reconocimiento de marca y aumentar la comunidad online de *Colonia Aventura Corre* en redes sociales, especialmente Instagram y Facebook, para atraer nuevos interesados en participar en sus actividades y eventos.
+
+**Tipo de Campaña:**
+Campaña de **Reconocimiento de marca** + **Interacción** (Me gusta, comentarios, reproducciones de video, seguidores).
+
+### 🔁 Etapa del Funnel
+
+La marca se encuentra en la **etapa de descubrimiento** (top of funnel). El objetivo es que personas que aún no conocen el proyecto lo descubran, lo sigan y empiecen a relacionarse con él.
+
+### 👥 Público Objetivo
+
+**Segmentación general inicial:**
+
+- **Rango de edad:** 18 a 50 años  
+- **Sexo:** Todos  
+- **Idioma:** Español  
+- **Ubicación geográfica:**  
+  - Prioridad: Colonia del Sacramento, Colonia Valdense, Rosario, Nueva Helvecia  
+  - Secundario: Resto del departamento de Colonia y zonas vecinas (San José, Soriano)
+
+**Intereses:**
+- Running, ciclismo, trail, triatlón, deportes al aire libre
+- Vida saludable, entrenamiento físico, yoga, bienestar
+- Eventos deportivos, maratones, Ironman, Spartan Race
+
+**Plataformas:**  
+- Instagram (principal canal visual y juvenil)  
+- Facebook (para conectar con audiencias más adultas y locales)
+
+### 💰 Presupuesto y Período
+
+- **Presupuesto inicial:** $10.000 UYU  
+  - Posibilidad de ampliación a $20.000 UYU si se desea escalar la campaña o incluir Google Ads como complemento.
+
+- **Duración estimada de campaña:**  
+  - **Primera fase:** 2 semanas de reconocimiento e interacción  
+  - **Segunda fase (opcional):** 2 semanas con objetivo de conversión (registro a eventos o comunidad)
+
+### 📌 Observaciones:
+
+- La táctica puede adaptarse en función de la recepción inicial y las métricas obtenidas (CTR, CPC, engagement).
+- Es recomendable utilizar creatividades visuales auténticas del equipo (fotos/videos reales) para generar mayor conexión y credibilidad.
+
 
 ## 4. Campañas Meta Ads
 
