--- a/04-EstrategiasAvanzadasMetasAds/4.5-Entrega1.md
+++ b/04-EstrategiasAvanzadasMetasAds/4.5-Entrega1.md
@@ -1,6 +1,6 @@
-# Entrega N°1
+# Entrega N°1: Tácticas publicitarias
 - **Objetivos generales**
-    - Desarrollar la capacidad de aplicar tácticas publicitarias requeridas con base a una estrategia previa.
+    - Desarrollar la capacidad de aplicar **tácticas publicitarias** requeridas con base a una estrategia previa.
 
 - **Objetivos específicos**
     - Demostrar el manejo, dominio y entendimiento de la plataforma publicitaria Meta Ads.
@@ -38,7 +38,9 @@
     - El objetivo publicitario, a su vez, es un punto de partida claro para la táctica. 
     - El objetivo publicitario corresponde a la etapa del funnel en que se encuentra la marca, emprendimiento, negocio o idea. El público publicitario se ha definido en este punto en términos generales que permiten una primera aproximación al target. Se describe a partir de todas las características sugeridas (Rango de edad, sexo, idioma/s, criterios de segmentación geográfica e intereses). A la vez, se menciona el período y presupuesto de táctica, desprendido de la estrategia.
 - **Campaña/s Meta Ads según estrategia**
-    - Se incluye la evidencia del paso a paso de las configuraciones solicitadas en niveles de campaña, grupos de anuncio y anuncios. A la vez, este paso a paso se encuentra acompañado de descripciones claras y suficientes que permiten entender las decisiones tomadas. Se adjuntan los screenshots de los anuncios y se mencionan todos elemento propios del armado de la campaña, lo cual permite una comprensión total de la misma y del recorrido realizado hasta el anuncio.
+    - Se incluye la evidencia del paso a paso de las configuraciones solicitadas en niveles de campaña, grupos de anuncio y anuncios. 
+    - A la vez, este paso a paso se encuentra acompañado de descripciones claras y suficientes que permiten entender las decisiones tomadas. 
+    - Se adjuntan los screenshots de los anuncios y se mencionan todos elemento propios del armado de la campaña, lo cual permite una comprensión total de la misma y del recorrido realizado hasta el anuncio.
 
 # 📊 Estrategia Publicitaria – Colonia Aventura Corre
 
@@ -60,18 +62,18 @@
 
 | **Características**             | **Emma Thompson**           | **Bruno Gonnet**             | **Camila Perdomo**                       |
 |----------------------------------|--------------------------------------|--------------------------------------|--------------------------------------|
-| Edad, empleo y género            | 38 años, médica, mujer               | 45 años, emprendedor, hombre         | 21 años, estudiante de Educación Física, mujer |
-| Estudios                         | Universitarios completos             | Universitarios incompletos           | Cursando nivel terciario             |
-| Nivel de ingresos                | Medio-alto                           | Alto                                  | Medio-bajo                           |
-| Lugar de residencia              | Colonia del Sacramento               | Colonia Valdense                     | Nueva Helvecia                       |
-| Redes sociales que usa           | Instagram, Facebook                  | Facebook, Strava                     | Instagram, TikTok                    |
-| Frecuencia de uso                | Diaria                               | Varias veces por semana              | Varias veces al día                  |
-| Influencers y marcas que sigue   | @corredoras, @vidasana              | @kilianjornet, marcas outdoor        | Influencers de running en TikTok     |
+| **Edad, empleo y género**            | 38 años, médica, mujer               | 45 años, emprendedor, hombre         | 21 años, estudiante de Educación Física, mujer |
+| **Estudios**                         | Universitarios completos             | Universitarios incompletos           | Cursando nivel terciario             |
+| **Nivel de ingresos**                | Medio-alto                           | Alto                                  | Medio-bajo                           |
+| **Lugar de residencia**              | Colonia del Sacramento               | Colonia Valdense                     | Nueva Helvecia                       |
+| **Redes sociales que usa**           | Instagram, Facebook                  | Facebook, Strava                     | Instagram, TikTok                    |
+| F**recuencia de uso**                | Diaria                               | Varias veces por semana              | Varias veces al día                  |
+| **Influencers y marcas que sigue**   | @corredoras, @vidasana              | @kilianjornet, marcas outdoor        | Influencers de running en TikTok     |
 | Pasatiempos                      | Running, yoga, leer                  | Trail running, bici de montaña       | Salir con amigos, trotar, gym        |
-| Pasiones                         | Bienestar integral, naturaleza       | Superación, aventura, comunidad      | Salud, deporte, descubrir cosas nuevas |
-| Contenidos que consume           | Podcasts de salud, blogs de running | Videos de carreras, entrevistas      | Reels motivacionales, playlists      |
-| Qué espera de una marca          | Cercanía, propósito, estética        | Profesionalismo, innovación, pasión | Que sea divertida, auténtica, motivadora |
-| Qué espera de Colonia Aventura Corre | Eventos bien organizados, comunidad activa | Desafíos, experiencias únicas        | Sentirse bienvenida, formar parte del grupo |
+| **Pasiones**                         | Bienestar integral, naturaleza       | Superación, aventura, comunidad      | Salud, deporte, descubrir cosas nuevas |
+| **Contenidos que consume**           | Podcasts de salud, blogs de running | Videos de carreras, entrevistas      | Reels motivacionales, playlists      |
+|**Qué espera de una marca**          | Cercanía, propósito, estética        | Profesionalismo, innovación, pasión | Que sea divertida, auténtica, motivadora |
+|**Qué espera de Colonia Aventura Corre** | Eventos bien organizados, comunidad activa | Desafíos, experiencias únicas        | Sentirse bienvenida, formar parte del grupo |
 
 
 ## 3. 📣 Táctica Publicitaria
