--- a/05-CamapanasGoogleAds/5.2-ConfiguracionCampaña.md
+++ b/05-CamapanasGoogleAds/5.2-ConfiguracionCampaña.md
@@ -1,1 +1,48 @@
 # Configuración de una campaña
+
+## Crear Campaña en Red de Búsqueda
+Configurar una campaña en la red de búsqueda de Google Ads es un proceso clave para que tus anuncios lleguen a las personas que están buscando activamente tus productos o servicios. A continuación, te explico cómo hacerlo paso a paso:
+- **Crear una nueva campaña**
+    - Accede a Google Ads y en el menú principal, haz clic en “Campañas” y luego en el botón “+” para crear una nueva campaña.
+    - Selecciona “Nueva campaña” y elige el objetivo de tu campaña, como “Ventas”, “Leads” o “Tráfico del sitio web”.
+    - Para la red de búsqueda, selecciona “Red de Búsqueda” como tipo de campaña.
+- **Configura los detalles generales de la campaña**
+    - Nombre de la campaña: Asigna un nombre que te permita identificar fácilmente la campaña.
+    - Redes: Google permite mostrar anuncios en la “Red de Búsqueda” y, opcionalmente, en la “Red de Display” (sólo si es relevante para tu campaña). Es recomendable empezar con solo la red de búsqueda para mayor control.
+    - Ubicaciones: Define las ubicaciones geográficas donde quieres que se muestren tus anuncios. Puedes elegir países, regiones específicas o un radio alrededor de una ubicación particular.
+    - Idiomas: Selecciona el idioma que habla tu público objetivo. Esto se relaciona con el idioma en el que están configurados los navegadores de los usuarios.
+- **Configura la segmentación geográfica**
+    - En la sección de Ubicaciones, selecciona las áreas específicas en las que deseas mostrar tus anuncios. Puedes:
+        - Incluir ubicaciones: Elige países, ciudades o regiones donde está tu mercado objetivo.
+        - Excluir ubicaciones: Si hay áreas donde no deseas mostrar tus anuncios, añádelas aquí.
+- **Elige la estrategia de puja**
+    - Estrategia de puja: Aquí decides cómo quieres que Google administre las pujas en la subasta de anuncios.
+        - Puedes elegir estrategias automáticas como “Maximizar clics” o “Maximizar conversiones” para dejar que Google ajuste las pujas automáticamente.
+        - Si prefieres tener más control, selecciona “CPC manual” para establecer manualmente las pujas por cada palabra clave.
+    - Presupuesto diario: Define cuánto estás dispuesto a gastar por día. Google intentará optimizar los resultados manteniéndose dentro de este límite.
+- **Configura los grupos de anuncios**
+    - Agrupa tus palabras clave en grupos de anuncios relacionados. Cada grupo debe centrarse en un tema o producto específico.
+    - Escribe los anuncios: Para cada grupo, crea anuncios de texto efectivos. Asegúrate de que incluyan palabras clave relevantes y un llamado a la acción claro.
+- **Revisión y lanzamiento**
+    - Revisa toda la configuración antes de lanzar la campaña. Asegúrate de que las palabras clave, la segmentación y las estrategias de puja estén alineadas con tus objetivos.
+    - Una vez satisfecho, haz clic en “Guardar y continuar” para lanzar tu campaña.
+Este proceso te permite configurar una campaña en la red de búsqueda de Google Ads de manera efectiva, asegurando que tus anuncios sean vistos por las personas correctas, en el momento adecuado y con el mensaje más relevante.
+
+## Configuración de Presupuesto
+Establecer un presupuesto diario y un costo por clic (CPC) máximo adecuados son pasos fundamentales para el éxito de una campaña en la red de búsqueda de Google Ads. A continuación, se describe un proceso paso a paso para configurar estos valores, con recomendaciones específicas según el tipo de negocio.
+- **Entendiendo el presupuesto diario**
+    - El presupuesto diario es la cantidad promedio que estás dispuesto a gastar por día en tu campaña. Google distribuye este presupuesto de manera flexible a lo largo del mes, lo que significa que algunos días podrías gastar un poco más y otros un poco menos, pero nunca superarás el presupuesto mensual total (presupuesto diario multiplicado por 30,4).
+        - **Negocios pequeños**: Si tienes un presupuesto limitado, es recomendable comenzar con una cantidad modesta, como $10 a $30 diarios, dependiendo de la competitividad de tu sector.
+        - **Negocios medianos a grandes**: Puedes considerar un presupuesto diario más alto, que puede oscilar entre $50 y $200 o más, especialmente si estás en un mercado competitivo.
+- **Estableciendo el costo por clic máximo** (CPC máximo)
+    - El CPC máximo es la cantidad máxima que estás dispuesto a pagar por cada clic en tu anuncio. Este valor influye directamente en el posicionamiento de tus anuncios y en la frecuencia con la que se muestran.
+        - **Competencia y valor del clic**: Investiga el costo promedio por clic en tu industria utilizando herramientas como el Planificador de Palabras Clave de Google. Para sectores altamente competitivos como el legal o los seguros, el CPC máximo puede ser de $5 a $20 o más. Para industrias menos competitivas, el CPC puede estar entre $1 y $3.
+        - **Balance entre pujas y presupuesto**: Asegúrate de que el CPC máximo seleccionado permita obtener un número razonable de clics dentro de tu presupuesto diario. Por ejemplo, si tienes un presupuesto de $30 y un CPC máximo de $2, podrías recibir aproximadamente 15 clics al día.
+- **Recomendaciones según el tipo de negocio**
+    - **Negocios locales**: Si tienes un negocio local, es posible que no necesites un presupuesto elevado. Un CPC máximo de $1 a $2 y un presupuesto diario de $20 a $50 podrían ser suficientes para atraer a clientes potenciales dentro de tu área geográfica.
+    - **E-commerce**: Para tiendas en línea, el CPC y el presupuesto dependerán del tipo de productos y la competitividad de las palabras clave. Si vendes productos de alto valor, podrías establecer un CPC máximo más alto y un presupuesto diario de $50 a $100 para maximizar la visibilidad.
+    - **Servicios especializados**: En sectores donde el valor de cliente es alto (por ejemplo, consultoría o servicios legales), es recomendable establecer un CPC máximo más alto, quizás en el rango de $5 a $10, con un presupuesto diario acorde que podría ir de $100 a $300.
+- **Monitoreo y ajuste**
+    - Una vez que la campaña está en marcha, monitorea el rendimiento regularmente. Revisa el número de clics, conversiones y el gasto diario. Ajusta el presupuesto diario o el CPC máximo según los resultados obtenidos, para optimizar el retorno de la inversión (ROI).
+
+> Siguiendo estas recomendaciones, podrás establecer un presupuesto diario y un CPC máximo que sean efectivos y sostenibles para tu negocio, permitiéndote alcanzar tus objetivos publicitarios en Google Ads.
