--- a/04-EstrategiasAvanzadasMetasAds/4.1-IdentificacionAudiencias.md
+++ b/04-EstrategiasAvanzadasMetasAds/4.1-IdentificacionAudiencias.md
@@ -1,6 +1,8 @@
 # Identificación de Audiencias
 Estrategias de Públicos Avanzados Optimizar las audiencias es esencial para campañas de alto impacto. Además de los públicos básicos, Meta Ads permite trabajar con públicos personalizados y similares para llegar a usuarios más relevantes.
 
+![Tipos](image-1.png)
+
 - **Públicos Personalizados**: 
     - Basados en datos propios, como listas de correos, interacciones en redes sociales o visitas al sitio web.
     - Ejemplo práctico que puede ayudar es crear un público personalizado cargando una lista de correos electrónicos de tus clientes actuales. Meta Ads buscará estos usuarios en sus plataformas para mostrarles tus anuncios. 
