--- a/04-EstrategiasAvanzadasMetasAds/4.3-AnalisisReportes.md
+++ b/04-EstrategiasAvanzadasMetasAds/4.3-AnalisisReportes.md
@@ -41,3 +41,5 @@ La configuración adecuada de los reportes en Meta Ads es fundamental para monit
 - Usa **campañas automatizadas**: Permite que Meta Ads ajuste automáticamente el presupuesto y la segmentación para maximizar resultados.
 - **Creatividades dinámicas**: Experimenta con reels y stories para aumentar la interacción.
 - **Ajustes en tiempo real**: Monitorea métricas clave diariamente y realiza ajustes para mejorar el rendimiento.
+
+![InteraccionWhatsApp](image-2.png)
